[package]
name = "nautilus-server"
version = "0.1.0"
edition = "2024"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[workspace]

[dependencies]
serde_json = "1.0.140"
serde_bytes = "0.11"
serde = "1.0"
serde_repr = "0.1"

tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
axum = { version = "0.7", features = ["macros"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
serde_yaml = "0.9.34"
tower-http = { version = "0.6.0", features = ["cors"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = [
    "aes",
] }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package = "aws-nitro-enclaves-nsm-api", optional = false }
bcs = "0.1.6"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
regex = { version = "1.5", optional = true }

sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", branch = "master" }
sui-crypto = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = [
    "ed25519",
], branch = "master", optional = true }
seal-sdk = { git = "https://github.com/MystenLabs/seal", rev = "608d30caba1d1fbf5f1d82e5a8e6280010fd3609", package = "seal-sdk", optional = true }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk", branch = "master" }
rhai = "1.23"
bech32 = "0.11.0"
hex = "0.4.3"

[features]
default = ["coeus-oracle"]
weather-example = []
twitter-example = ["regex"]
seal-example = ["sui-crypto", "seal-sdk"]
coeus-oracle = ["sui-crypto"]
